# easy-peasy-modules

./: CMakeLists.txt  LICENSE  README.md
app/: easy-peasy-modules-app.xml  easy-peasy-modules-system.xml
control_module/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/control_module/: CMakeLists.txt  main.cpp
src/control_module/src/: main.cpp
src/extra_module/: CMakeLists.txt
src/extra_module/src/: main.cpp
src/module1/: CMakeLists.txt
src/module2/: CMakeLists.txt
src/module3/: CMakeLists.txt
src/module3/src/: main.cpp
src/vision_module/: CMakeLists.txt  main.cpp
src/vision_module/src/: main.cpp
vision_module/: main.cpp
